# ToneVision

./: .gitignore  Cargo.toml  LICENSE  README.md  RUN_INSTRUCTIONS.md  config.json  installation_instructions.md  requirements.md
.github/workflows/: release.yml
public/: disclaimer.html  index.html
public/admin/: index.html  main.js  styles.css
public/rx/: index.html  main.js  styles.css
public/tx/: index.html  main.js  styles.css
src/: icon.rgba  main.rs  network.rs  server.rs  state.rs  tray.rs
