[package]
name = "tonevision"
version = "1.0.2"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
fast_qr = { version = "0.12", features = ["svg"] }
rust-embed = "8.0"
mime_guess = "2.0"
open = "5.1"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.14"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }
